# backend/src/controllers/postControllers.js
@@ -1,10 +1,11 @@
 const { PostModel } = require('../models');
+var _ = require('lodash');
 
 const getUserPosts = async (req, res) => {
   const user = req.user;
   if (!user) return res.json({ err: 'You are not authorized!' });
   try {
-    const result = await PostModel.find({ authorId: req.user._id.toString() });
+    const result = await PostModel.find({ authorId: user._id.toString() });
     res.status(200).json(result);
   } catch {
     res.status(404).json({ err: 'Fail to retrieve your posts.' });
@@ -19,10 +20,10 @@ const createPost = async (req, res) => {
   }
   try {
     const newPost = new PostModel({
-      authorId: req.user._id,
+      authorId: user._id.toString(),
       postDate: new Date(),
       postCaption: req.body.postCaption,
-      postLikes: 0,
+      postLikeCounts: 0,
       postComments: []
     });
 
@@ -34,15 +35,40 @@ const createPost = async (req, res) => {
   }
 };
 
+const updatePost = async (req, res) => {
+  const user = req.user;
+  if (!user) return res.json({ err: 'You are not authorized!' });
+
+  if (!req.body.postCaption) {
+    return res.status(400).json({ err: 'Cannot change the post without a caption.' });
+  }
+
+  try {
+    const updatedData = _.omit(req.body, [
+      'authorId',
+      'postDate',
+      'postLikeCounts',
+      'postComments'
+    ]);
+    console.log(updatedData);
+    const updatedPostData = await PostModel.findByIdAndUpdate(req.params.postId, updatedData, {
+      new: true
+    });
+    res.status(200).json(updatedPostData);
+  } catch {
+    res.status(400).json({ err: 'Cannot change the post data to the database.' });
+  }
+};
+
 const deletePost = async (req, res) => {
   const user = req.user;
   if (!user) return res.json({ err: 'You are not authorized!' });
 
   try {
-    const post = await PostModel.findById(req.body.postId);
+    const post = await PostModel.findById(req.params.postId);
     if (user._id != post.authorId) return res.json({ err: 'You are not the author of this post!' });
     else {
-      await PostModel.findByIdAndDelete(req.body.postId);
+      await PostModel.findByIdAndDelete(req.params.postId);
       res.sendStatus(200);
     }
   } catch {
@@ -62,4 +88,4 @@ const getAllPosts = async (req, res) => {
   }
 };
 
-module.exports = { getUserPosts, createPost, deletePost, getAllPosts };
+module.exports = { getUserPosts, createPost, updatePost, deletePost, getAllPosts };
