# backend/src/models/ConnectionRequest.js
@@ -1,12 +1,0 @@
-// This is a middle table
-const mongoose = require('mongoose');
-
-const Schema = mongoose.Schema;
-
-const ConnectionRequestSchema = new Schema({
-  senderId: { type: String, required: true },
-  receiverId: { type: String, required: true }
-});
-
-const ConnectionRequestModel = mongoose.model('connectionRequest', ConnectionRequestSchema);
-module.exports = ConnectionRequestModel;
