# backend/src/routes/post.js
@@ -1,10 +1,11 @@
 const routes = require('express').Router();
 const controllers = require('../controllers');
 
+routes.get('/all', controllers.getAllPosts);
+
 routes.get('/', controllers.getUserPosts);
 routes.post('/', controllers.createPost);
-routes.put('/');
-routes.delete('/', controllers.deletePost);
-routes.get('/all', controllers.getAllPosts);
+routes.put('/:postId', controllers.updatePost);
+routes.delete('/:postId', controllers.deletePost);
 
 module.exports = routes;
